--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 
   <body>
     <!-- the entire body must be written by student -->
-    <div id="output"></div>
+	  <button id="download-images-button">Download Images</button>
+	  <div id="loading"> </div>
+	  <div id="error" style={display:none;}></div>
+	<div id="output"></div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
